feat: add ability of delete post
