# app/Http/Requests/Post/UpdatePostRequest.php
@@ -3,33 +3,22 @@
 namespace App\Http\Requests\Post;
 
 use App\Models\ValueObjects\PostCategories;
-use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
 
-class AddPostRequest extends FormRequest
+class UpdatePostRequest extends PostRequest
 {
-    public function authorize(): bool
-    {
-        return true;
-    }
-
     public function rules(): array
     {
         return [
-            'user_id'         => ['required', 'uuid', 'exists:users,id'],
-            'category'        => ['required', Rule::in(PostCategories::getAllowedValues())],
-            'title'           => ['required', 'string', 'max:256'],
-            'description'     => ['required', 'string', 'max:256'],
+            'category'        => ['nullable', Rule::in(PostCategories::getAllowedValues())],
+            'title'           => ['nullable', 'string', 'max:256'],
+            'description'     => ['nullable', 'string', 'max:256'],
         ];
     }
 
     public function bodyParameters(): array
     {
         return [
-            'user_id' => [
-              'description'   => 'User id',
-              'example'       => '9a2e1b3e-8d29-41bc-b341-bf8804a5ce62',
-            ],
             'category' => [
                 'description' => 'Category of blog post. Possible to use beauty, food, life, sport',
                 'example'     => 'food',
